Repaired images on mobile devices by getting rid of the Background none on media screen

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,8 +135,6 @@ button:hover {
         color: white;
         border: solid white 2px;
         padding: 2vmin;
-        background: none;
-    }
     button {
         border: none;
     }
